--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "morgan": "^1.9.1"
   },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "heroku-postbuild": "cd client && npm run build"
+    "heroku-postbuild":"cd client && npm install && npm install --only=dev && npm run build"
   },
   "engines": {
     "node": "10.8.0"
