--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "still-here",
   "version": "1.0.0",
   "description": "Web App for Mental Health Help and Awareness",
-  "main": "server.js"
-  ,
+  "main": "server.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Aoliveras/still-here.git"
@@ -27,7 +26,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "heroku-postbuild":"cd client && npm install && npm install --only=dev && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev && npm run build"
   },
   "engines": {
     "node": "10.8.0"
